--- a/demo/index.html
+++ b/demo/index.html
@@ -4,10 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>多页面后台管理系统</title>
-  <!-- <base href="/"> -->
+  <base href="/">
 
-
-  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./favicon.ico">
   <style>
@@ -276,6 +274,6 @@
       </div>
     </div>
   </app-root>
-<script type="text/javascript" src="runtime.77c0a07a5193ac9bde21.js"></script><script type="text/javascript" src="es2015-polyfills.97acef82ab9e3f500c7a.js" nomodule></script><script type="text/javascript" src="polyfills.2a538d01b523e52a0c0d.js"></script><script type="text/javascript" src="main.baacd18ded9a69b0c225.js"></script></body>
+<script type="text/javascript" src="runtime.3f9f4b4a6a162726406b.js"></script><script type="text/javascript" src="es2015-polyfills.97acef82ab9e3f500c7a.js" nomodule></script><script type="text/javascript" src="polyfills.2a538d01b523e52a0c0d.js"></script><script type="text/javascript" src="main.d686f8f45f1098abd927.js"></script></body>
 
 </html>
